[fix] Hide total amount on mobile view

--- a/src/pages/Details/index.module.scss
+++ b/src/pages/Details/index.module.scss
@@ -1,3 +1,9 @@
+.root {
+  .desktop_preview {
+    display: none;
+  }
+}
+
 @media only screen and (min-width: 64em) {
   .root {
     display: flex;
